# Option-Fair-Value

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  serve-tailscale.bat  start-dev.bat  stop-dev.bat
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/analysis/: __init__.py  mispricing.py  models.py  scanner.py
backend/app/api/: alerts.py  analysis.py  chain.py  expiries.py  fairvalue.py  limits.py  schemas.py
backend/app/data/: __init__.py  cache.py  fred_client.py  models.py  schema.sql  yfinance_client.py
backend/app/pricing/: __init__.py  binomial.py  black_scholes.py  greeks.py  implied_vol.py  monte_carlo.py  ranges.py
backend/tests/: test_alerts_api.py  test_analysis_api.py  test_binomial.py  test_black_scholes.py  test_cache.py  test_fred_client.py  test_greeks.py  test_implied_vol.py  test_mispricing.py  test_monte_carlo.py  test_ranges.py  test_scanner.py  test_yfinance_client.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts  hooks.ts
frontend/src/components/: AlertsPanel.tsx  ChainCell.tsx  ErrorBoundary.tsx  ExpirySelector.tsx  FairValuePanel.tsx  GreeksTable.tsx  IVSmilePanel.tsx  InputSliders.tsx  Loading.tsx  MispricingList.tsx  ModelComparison.tsx  OptionsChain.tsx  RangeChart.tsx  SymbolSearch.tsx
